# ccb-essentials

./: README.md  pyproject.toml
ccb_essentials/: constant.py  filesystem.py  signal.py  sqlite3.py  subprocess.py
tests/: test_argparse.py  test_filesystem.py  test_logger.py  test_sqlite3.py  test_subprocess.py
